--- a/Final Project/StyleSheet/main.css
+++ b/Final Project/StyleSheet/main.css
@@ -506,7 +506,6 @@ toggle button)*/
     position: absolute;
     top: .4em;
     left: .4em;
-    font-size: 2em;
     border: 3px solid var(--almost-white);
     padding: .2em;
 }
@@ -929,8 +928,8 @@ main wheelchair button*/
 /*Emphasize header which indicates the current web page and introduces the 'Featured' section*/
 #main-page-title {
     font-size: 1.6em;
-    padding-top: 180px;
-    padding-left: 50px;
+    padding-top: 200px;
+    padding-left: 150px;
 }
 /*Adjust header size to screen dimensions*/
 #main-page-title h1 {
@@ -943,60 +942,6 @@ main wheelchair button*/
     font-size: 1.6em;
     margin-top: .78em;
 }
-/*Adjust the 'Read More Here' link to behave as a button*/
-.news-posts a {
-    padding: 2em 0 0 0;
-    display: block;
-    transition: all 100ms;
-    text-decoration: none;
-    font-family: var(--main-header);
-    font-size: 0.8em;
-    font-weight: 600;
-    color: var(--dark-black);
-}
-
-/*Attract the user to the 'Read More' buttons by adding a smooth animation effect*/
-.news-posts span {
-    transition: 0.5s;
-    margin: 0 .5em;
-    font-size: 1.5em;
-}
-
-/*The two right carets moves towards the right to indicate interactivity*/
-.news-posts a:hover span {
-    padding-left: 0.4em;
-}
-
-/*'Read More' buttons show a selected indicator, emphasizing the CTA as an interactive element*/
-.news-posts a:hover {
-    color: var(--almost-white);
-    background-color: var(--light-medium-grey);
-}
-/*---------------------------------------------------------------*/
-/*'Featured News' main section-----------------------------------*/
-/*---------------------------------------------------------------*/
-
-.featured-grid-container {
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    gap: 10px;
-    margin-top: 1.5em;
-    padding-left: 50px;
-    padding-right: 50px;
-    min-width: 0px;
-}
-  
-.featured-grid-container > div {
-    text-align: left;
-    padding: 20px 0;
-    max-width: 100%;
-}
-
-.featured-item1 {
-    grid-column: 1 / span 2;
-    grid-row: 1/ span 2;
-}
-
 /*---------------------------------------------------------------*/
 /*'Home' page: Desktop-------------------------------------------*/
 /*---------------------------------------------------------------*/
@@ -1011,8 +956,278 @@ main wheelchair button*/
     .nav-bar.sticky .company-name-JSON {
         display: none;
     }
+    /*---------------------------------------------------------------*/
+    /*'Featured News' grid-------------------------------------------*/
+    /*---------------------------------------------------------------*/
+
+    /*split featured news section into 4 column grids*/
+    .featured-grid-container {
+        display: grid;
+        grid-template-columns: auto auto auto auto;
+        gap: 20px;
+        margin-top: 1.5em;
+        padding-left: 150px;
+        padding-right: 150px;
+        min-width: 0px;
+    }
+    
+    /*border padding and grid width set up*/
+    .featured-grid-container > div {
+        text-align: left;
+        padding: 20px 0;
+        max-width: 100%;
+    }
+
+    /*setting up the first item to occupy 2 by 2 times the space of other items*/
+    .featured-item1 {
+        grid-column: 1 / span 2;
+        grid-row: 1/ span 2;
+    }
+
+    /*---------------------------------------------------------------*/
+    /*'Bottom' grid--------------------------------------------------*/
+    /*---------------------------------------------------------------*/
+
+    /*Split screen to 2:1 ratio*/
+    .home-page-bottom-grid-container {
+        display: grid;
+        grid-template-columns: auto auto auto;
+        gap: 20px;
+        margin-top: 1.5em;
+        padding-left: 150px;
+        padding-right: 150px;
+        min-width: 0px;
+    }
+        
+    /*border padding and grid width set up*/
+    .home-page-bottom-grid-container > div {
+        text-align: left;
+        padding: 20px 0;
+        max-width: 100%;
+    }
+
+    /*setting up the first item to occupy 2 by 2 times the space of other items*/
+    .home-page-bottom-item1 {
+        grid-column: 1 / span 2;
+        grid-row: 1/ span 2;
+        display: grid;
+        grid-row-gap: 20px;
+    }
+    /*-------------------------------------------------------------------------------*/
+    /*Style text to appear besides images--------------------------------------------*/
+    /*-------------------------------------------------------------------------------*/
+
+    /*Ensure that image does not overflow out of its designated space*/
+    .image-side-container {
+        display: grid; 
+        grid-template-columns: 1fr 1fr;
+        column-gap: 20px;
+        overflow: hidden;
+    }
+
+    /*Smooth the zoom in effect animation*/
+    .image-side-container img {
+        width:100%;
+        height:100%;
+        transition: all 0.4s ease-out;
+    }
+
+    /*Emphasize the given image by scaling up the image to mirror a "zoom in" effect*/
+    .image-side-container img:hover {
+        transform: scale(1.02);
+    }    
+}
+/*---------------------------------------------------------------*/
+/*'Home' page: Mobile--------------------------------------------*/
+/*---------------------------------------------------------------*/
+@media screen and (max-width: 570px) {
+
+    /*---------------------------------------------------------------*/
+    /*'Featured News' grid-------------------------------------------*/
+    /*---------------------------------------------------------------*/
+
+    /*rearrange grid so it no longer split content into columns------*/
+    .featured-grid-container {
+        display: grid;
+        grid-template-columns: auto;
+        gap: 20px;
+        margin-top: 1.5em;
+        padding-left: 50px;
+        padding-right: 50px;
+        min-width: 0px;
+    }
+        
+    /*border padding and grid width set up*/
+    .featured-grid-container > div {
+        text-align: left;
+        padding: 20px 0;
+        max-width: 100%;
+    }
+    /*---------------------------------------------------------------*/
+    /*'Bottom' grid--------------------------------------------------*/
+    /*---------------------------------------------------------------*/
+
+    /*rearrange grid so it no longer split content into columns------*/
+    .home-page-bottom-grid-container {
+        display: grid;
+        grid-template-columns: auto;
+        gap: 20px;
+        margin-top: 1.5em;
+        padding-left: 50px;
+        padding-right: 50px;
+        min-width: 0px;
+    }
+        
+    /*border padding and grid width set up*/
+    .home-page-bottom-grid-container > div {
+        text-align: left;
+        padding: 20px 0;
+        max-width: 100%;
+    }
+
+    /*-------------------------------------------------------------------------------*/
+    /*Style text to appear besides images--------------------------------------------*/
+    /*-------------------------------------------------------------------------------*/
+
+    /*Ensure that image does not overflow out of its designated space*/
+    .image-side-container {
+        display: grid; 
+        grid-template-columns: 1fr;
+        column-gap: 20px;
+        overflow: hidden;
+    }
+
+    /*Smooth the zoom in effect animation*/
+    .image-side-container img {
+        width:100%;
+        height:100%;
+        transition: all 0.4s ease-out;
+    }
+
+    /*Emphasize the given image by scaling up the image to mirror a "zoom in" effect*/
+    .image-side-container img:hover {
+        transform: scale(1.02);
+    }    
+
+
+}
+/*-------------------------------------------*/
+/*'Home' page: Tablet------------------------*/
+/*-------------------------------------------*/
+
+@media screen and (min-width: 570px) and (max-width: 1010px) {
+
+    /*---------------------------------------------------------------*/
+    /*'Featured News' grid-------------------------------------------*/
+    /*---------------------------------------------------------------*/
+
+    /*split featured news section into 4 column grids*/
+    .featured-grid-container {
+        display: grid;
+        grid-template-columns: auto auto auto;
+        gap: 20px;
+        margin-top: 1.5em;
+        padding-left: 100px;
+        padding-right: 100px;
+        min-width: 0px;
+    }
+        
+    /*border padding and grid width set up*/
+    .featured-grid-container > div {
+    text-align: left;
+    padding: 20px 0;
+    max-width: 100%;
+    }
+    
+    /*setting up the first item to occupy 2 by 2 times the space of other items*/
+    .featured-item1 {
+        grid-column: 1 / span 2;
+        grid-row: 1/ span 2;
+    }
+    /*---------------------------------------------------------------*/
+    /*'Bottom' grid--------------------------------------------------*/
+    /*---------------------------------------------------------------*/
+
+    /*grid spearate content to equal size columns--------------------*/
+    .home-page-bottom-grid-container {
+        display: grid;
+        grid-template-columns: 50% auto;
+        gap: 20px;
+        margin-top: 1.5em;
+        padding-left: 100px;
+        padding-right: 100px;
+        min-width: 0px;
+    }
+        
+    /*border padding and grid width set up*/
+    .home-page-bottom-grid-container > div {
+        text-align: left;
+        padding: 20px 0;
+        max-width: 100%;
+    }
+
+    /*-------------------------------------------------------------------------------*/
+    /*Style text to appear besides images--------------------------------------------*/
+    /*-------------------------------------------------------------------------------*/
+
+    /*Ensure that image does not overflow out of its designated space*/
+    .image-side-container {
+        display: grid; 
+        grid-template-columns: 1fr;
+        column-gap: 20px;
+        overflow: hidden;
+    }
+
+    /*Smooth the zoom in effect animation*/
+    .image-side-container img {
+        width:100%;
+        height:100%;
+        transition: all 0.4s ease-out;
+    }
+
+    /*Emphasize the given image by scaling up the image to mirror a "zoom in" effect*/
+    .image-side-container img:hover {
+        transform: scale(1.02);
+    }    
+}
+/*-------------------------------------------------------*/
+/*'Current News' page CSS--------------------------------*/
+/*-------------------------------------------------------*/
+
+@media screen and (min-width: 1011px) {
+
+    /*---------------------------------------------------------------*/
+    /*'Current News' page main grid------------------------------------*/
+    /*---------------------------------------------------------------*/
+
+    /*split featured news section into 4 column grids*/
+    .current-grid-container {
+        display: grid;
+        grid-template-columns: 60% auto;
+        gap: 10px;
+        grid-column-gap: 50px;
+        margin-top: 1.5em;
+        padding-left: 150px;
+        padding-right: 150px;
+        min-width: 0px;
+    }
+    
+    /*border padding and grid width set up*/
+    .current-grid-container > div {
+        text-align: left;
+        padding: 20px 0;
+        max-width: 100%;
+    }
+    
+    .current-item1 {
+        display: grid;
+        grid-gap: 20px;
+        grid-template-columns: 1fr 1fr;
+    }
+    .current-item3 {
+        grid-column: 1 / span 2;
+        grid-row: 1/ span 2;
+    }
 
     
 }
-
-
