--- a/Final Project/StyleSheet/main.css
+++ b/Final Project/StyleSheet/main.css
@@ -1215,7 +1215,7 @@ main wheelchair button*/
     /*border padding and grid width set up*/
     .current-grid-container > div {
         text-align: left;
-        padding: 20px 0;
+        padding: 20px;
         max-width: 100%;
     }
     
@@ -1224,9 +1224,27 @@ main wheelchair button*/
         grid-gap: 20px;
         grid-template-columns: 1fr 1fr;
     }
+    .current-item2 {
+        display: grid;
+        grid-gap: 50px;
+    }
     .current-item3 {
         grid-column: 1 / span 2;
         grid-row: 1/ span 2;
+    }
+    .current-item10 {
+        padding: 20px;
+        border-top: 1px solid black;
+        border-left: 1px solid black;
+        border-bottom: 1px solid black;
+        border-right: 1px solid black;
+    }
+    .current-item11 {
+        padding: 20px;
+        border-top: 1px solid black;
+        border-left: 1px solid black;
+        border-bottom: 1px solid black;
+        border-right: 1px solid black;
     }
 
     
