--- a/Final Project/StyleSheet/main.css
+++ b/Final Project/StyleSheet/main.css
@@ -1246,6 +1246,31 @@ main wheelchair button*/
         border-bottom: 1px solid black;
         border-right: 1px solid black;
     }
+    .current-item12 {
+        padding: 20px;
+        border-top: 1px solid black;
+        border-left: 1px solid black;
+        border-bottom: 1px solid black;
+        border-right: 1px solid black;
+    }
+    /*-------------------------------------------------------------------------------*/
+    /*Style text to appear besides images--------------------------------------------*/
+    /*-------------------------------------------------------------------------------*/
+
+    /*Ensure that image does not overflow out of its designated space*/
+    .image-text-container {
+        display: grid; 
+        grid-template-columns: 30px auto;
+        column-gap: 20px;
+        overflow: hidden;
+    }
+
+    /*Smooth the zoom in effect animation*/
+    .image-tex-container img {
+        width:100%;
+        height:100%;
+        transition: all 0.4s ease-out;
+    }
 
     
 }
