--- a/Final Project/StyleSheet/raid.css
+++ b/Final Project/StyleSheet/raid.css
@@ -43,10 +43,7 @@
 
     .raid-item {
         padding: 20px;
-        border-top: 1px solid black;
-        border-left: 1px solid black;
-        border-bottom: 1px solid black;
-        border-right: 1px solid black;
+        box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
     }
 
     /*-------------------------------------------------------------------------------*/
@@ -81,6 +78,7 @@
         grid-template-columns: auto auto auto auto auto auto;
         overflow: hidden;
         object-fit: contain;
+        padding-bottom: 20px;
     }
 
     /* Style the buttons */
@@ -109,6 +107,86 @@
 /*'Raid Guide' page: Mobile--------------------------------------*/
 /*---------------------------------------------------------------*/
 @media screen and (max-width: 570px) {
+    .raid-grid-container {
+        display: grid;
+        gap: 10px;
+        grid-template-columns: auto;
+        grid-row-gap: 50px;
+        margin-top: 1.5em;
+        padding-left: 50px;
+        padding-right: 50px;
+        padding-bottom: 50px;
+        min-width: 0px;
+
+    }
+
+    /*border padding and grid width set up*/
+    .raid-grid-container>div {
+        text-align: left;
+        max-width: 100%;
+    }
+
+    .raid-item {
+        padding: 20px;
+        box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+    }
+
+    /*-------------------------------------------------------------------------------*/
+    /*Style text to appear besides images--------------------------------------------*/
+    /*-------------------------------------------------------------------------------*/
+
+    /*Ensure that image does not overflow out of its designated space*/
+    .image-poke-container {
+        display: grid;
+        grid-template-columns: 60px auto;
+        column-gap: 20px;
+        overflow: hidden;
+        border-top: 1px solid black;
+        border-left: 1px solid black;
+        border-bottom: 1px solid black;
+        border-right: 1px solid black;
+    }
+
+    /*Smooth the zoom in effect animation*/
+    .image-poke-container img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        border-right: 1px solid black;
+    }
+
+    /*-------------------------------------------------------------------------------*/
+    /*Content filter-----------------------------------------------------------------*/
+    /*-------------------------------------------------------------------------------*/
+    #filter-main-container {
+        display: grid;
+        grid-template-columns: auto auto auto auto auto auto;
+        overflow: hidden;
+        object-fit: contain;
+        padding-bottom: 20px;
+        
+    }
+
+    /* Style the buttons */
+    .filter-option {
+        opacity: 0.6;
+        transition: 0.3s;
+    }
+
+    .active,
+    .filter-option:hover {
+        opacity: 1;
+    }
+
+    .Poke {
+        display: none;
+        /* Hidden by default */
+    }
+
+    .show {
+        display: block;
+    }
+
 }
 
 /*-------------------------------------------*/
@@ -122,10 +200,79 @@
         grid-template-columns: auto;
         grid-row-gap: 50px;
         margin-top: 1.5em;
-        padding-left: 25%;
-        padding-right: 25%;
+        padding-left: 10%;
+        padding-right: 10%;
         padding-bottom: 50px;
         min-width: 0px;
 
     }
+
+    
+
+    /*border padding and grid width set up*/
+    .raid-grid-container>div {
+        text-align: left;
+        max-width: 100%;
+    }
+
+    .raid-item {
+        padding: 20px;
+        box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+    }
+
+    /*-------------------------------------------------------------------------------*/
+    /*Style text to appear besides images--------------------------------------------*/
+    /*-------------------------------------------------------------------------------*/
+
+    /*Ensure that image does not overflow out of its designated space*/
+    .image-poke-container {
+        display: grid;
+        grid-template-columns: 80px auto;
+        column-gap: 20px;
+        overflow: hidden;
+        border-top: 1px solid black;
+        border-left: 1px solid black;
+        border-bottom: 1px solid black;
+        border-right: 1px solid black;
+    }
+
+    /*Smooth the zoom in effect animation*/
+    .image-poke-container img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        border-right: 1px solid black;
+    }
+
+    /*-------------------------------------------------------------------------------*/
+    /*Content filter-----------------------------------------------------------------*/
+    /*-------------------------------------------------------------------------------*/
+    #filter-main-container {
+        display: grid;
+        grid-template-columns: auto auto auto auto auto auto;
+        overflow: hidden;
+        object-fit: contain;
+        padding-bottom: 20px;
+    }
+
+    /* Style the buttons */
+    .filter-option {
+        opacity: 0.6;
+        transition: 0.3s;
+    }
+
+    .active,
+    .filter-option:hover {
+        opacity: 1;
+    }
+
+    .Poke {
+        display: none;
+        /* Hidden by default */
+    }
+
+    .show {
+        display: block;
+    }
+
 }
