--- a/Final Project/StyleSheet/aboutus.css
+++ b/Final Project/StyleSheet/aboutus.css
@@ -55,6 +55,39 @@ h2 {
 }
 
 /*---------------------------------------------------------------*/
+/*Join Us--------------------------------------------------------*/
+/*---------------------------------------------------------------*/
+
+.Discord-Guilded {
+    margin-top: 2em;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 0.8em 5em;
+}
+
+.Discord-Guilded-background {
+    grid-row: 1;
+    grid-column: 1;
+    grid-column: 1 / span 2 ;
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    object-fit: cover;
+    opacity: 0.7;
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.Discord-Guilded img {
+    object-fit: cover;
+    max-width: 100%;
+    max-height: 100%;
+}
+/*---------------------------------------------------------------*/
 /*Contact form---------------------------------------------------*/
 /*---------------------------------------------------------------*/
 
@@ -74,7 +107,6 @@ textarea {
 input[type=submit] {
     background-color: var(--dark-grey);
     color: var(--white);
-    ;
     padding: 12px 20px;
     border: none;
     border-radius: 4px;
@@ -107,12 +139,6 @@ input[type=submit]:hover {
     .nav-bar.sticky .company-name-JSON {
         display: none;
     }
-
-    /*--------------------------------------------------------------------*/
-    /*"Our Journey" timeline----------------------------------------------*/
-    /*--------------------------------------------------------------------*/
-
-
 
     /*--------------------------------------------------------------------*/
     /*"Join Us"-----------------------------------------------------------*/
