--- a/Final Project/StyleSheet/aboutus.css
+++ b/Final Project/StyleSheet/aboutus.css
@@ -11,7 +11,7 @@ h2 {
     margin-top: 2em;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    padding: 0.8em 5em;
+    padding: 2em 5em;
     row-gap: 20px;
 }
 
@@ -59,19 +59,13 @@ h2 {
 /*---------------------------------------------------------------*/
 
 .Discord-Guilded {
-    margin-top: 2em;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0.8em 5em;
+    padding: 2em 5em;
 }
 
 .Discord-Guilded-background {
-    grid-row: 1;
-    grid-column: 1;
-    grid-column: 1 / span 2 ;
     width: 100%;
     height: 100%;
-    margin: auto;
     object-fit: cover;
     opacity: 0.7;
 }
@@ -123,6 +117,7 @@ input[type=submit]:hover {
     background-color: #f2f2f2;
     padding: 20px;
     margin: auto;
+    margin-bottom: 50px;
 }
 
 /*---------------------------------------------------------------*/
