report, footer and code documentation left

--- a/Final Project/StyleSheet/aboutus.css
+++ b/Final Project/StyleSheet/aboutus.css
@@ -135,8 +135,30 @@ input[type=submit]:hover {
         display: none;
     }
 
-    /*--------------------------------------------------------------------*/
-    /*"Join Us"-----------------------------------------------------------*/
-    /*--------------------------------------------------------------------*/
+}
+
+/*---------------------------------------------------------------*/
+/*'About Us' page: Mobile----------------------------------------*/
+/*---------------------------------------------------------------*/
+
+@media screen and (max-width: 570px) {
+
+    .about-us-top {
+        grid-template-columns: 1fr;
+        padding: 1.5em;
+        row-gap: 20px;
+    }
+
+    .about-us-top-item2 {
+        grid-row: 3
+    }
+
+    .Discord-Guilded {
+        padding: 2em 2em;
+    }
+
+    .contact-form {
+       width: auto;
+    }
 
 }
